Fix icons grid
The `max-height` meant that some were too small for the grid, and the
nesting of divs was wrong and put each icon in its own column.

--- a/app/styles/modules/_icons.scss
+++ b/app/styles/modules/_icons.scss
@@ -54,7 +54,7 @@
       @include transition-bounce;
       svg {
         width: 12px;
-        max-height: 16px;
+        height: 16px;
       }
       &:hover {
         box-shadow: 0 0 0px 2px $green;
